<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XinkVPN</string>
    <string name="selectVpn">Choose Active VPN</string>
    <string name="add_vpn">Add VPN</string>
    <string name="del">Delete</string>
    <string name="add">Add</string>
    <string name="vpn_pptp">VPN\&quot;PPTP\&quot;</string>
    <string name="vpn_l2tp">VPN\&quot;L2TP\&quot;</string>
    <string name="vpn_l2tp_psk">VPN\&quot;L2TP/IPSec PSK\&quot;</string>
    <string name="vpn_pptp_info">Point-to-Point Tunneling Protocol</string>
    <string name="vpn_l2tp_info">Layer 2 Tunneling Protocol</string>
    <string name="vpn_l2tp_psk_info">Pre-shared key based L2TP/IPSec VPN</string>
    <string name="err_empty_name">Please enter a VPN name.</string>
    <string name="err_duplicated_profile_name">The VPN name \'%s\' already exists.</string>
    <string name="vpn_list_desc">VPNs</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="about">About</string>
    <string name="pack_ver">%1$s %2$s</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_report_bug">Report bugs:</string>
    <string name="del_vpn_confirm">Are you sure to delete this VPN?</string>
    <string name="connecting">Connecting...</string>
    <string name="disconnecting">Disconnecting...</string>
    <string name="vpnname">VPN name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="comma_sep">comma separated</string>
    <string name="dns_suffices">DNS search domains</string>
    <string name="server">VPN server</string>
    <string name="encrypt_enabled">Enable encryption</string>
    <string name="l2tp_secret_enabled">Enable L2TP secret</string>
    <string name="l2tp_secret">L2TP secret</string>
    <string name="psk">IPSec pre-shared key</string>
    <string name="help">Wiki</string>
    <string name="err_no_active_vpn">There is no active VPN.</string>
    <string name="err_empty_psk">Please enter IPSec pre-shared key.</string>
    <string name="err_empty_secret">Please enter L2TP secret.</string>
    <string name="export">Backup</string>
    <string name="err_no_writable_storage">Failed to access external storage.</string>
    <string name="err_exp_write_storage_failed">Failed to access external storage.</string>
    <string name="err_exp_failed">Backup failed.</string>
    <string name="i_exp_done">Backup success.</string>
    <string name="i_exp">Data will be exported to \'%1$s\', overwritting the previouse backup.</string>
    <string name="imp">Restore</string>
    <string name="err_imp_nodata">Backup data not found on external storage.</string>
    <string name="err_imp_failed">Restore failed.</string>
    <string name="i_imp_done">Restore success.</string>
    <string name="i_imp">Data will be restored, changes made after \'%1$s\' will be lost.</string>
    <string name="err_privcmd">Execute privilege command failure.</string>
    <string name="hack_keystore">L2TP secret / IPSec PSK Unavailable</string>
    <string name="i_hack_keystore">In order to enable L2TP secret and IPSec PSk in XinkVpn, system keystore service should be replaced, check it out: http://bit.ly/H4G7yp</string>
    <string name="neverShow">Never show this again</string>
    <string name="diag">Hack</string>
    <string name="hacked">OK, keystore service is ready.</string>
    <string name="settings">Settings</string>
    <string name="keepalive">Keep-alive</string>
    <string name="enable_keepalive">Keep connection alive</string>
    <string name="keepalive_on">Enabled *Keep connection alive by accessing internet periodically, may produce a small amount of network traffic</string>
    <string name="keepalive_period">Heartbeat interval</string>
    <string name="keepalive_period_sum">Take a keep-alive heartbeat every %s</string>
    <string name="task_main">XinkVpn</string>
    <string name="task_toggle">Toggle VPN Connection</string>

    <string name="crash_dialog_title">Error Report</string>
    <string name="crash_dialog_text">Oops! Something went wrong with XinkVpn...
        Please help us fix it, an error report will be sent by email, if you allows.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>

    <string name="pref_crash_report_title">Error Reports</string>
    <string name="pref_crash_report_enabled_title">Enable crash reports</string>
    <string name="pref_crash_report_enabled_sum">Send crash reports through email</string>
    <string name="pref_crash_conn_broken_title">Report connect problems</string>
    <string name="pref_crash_conn_broken_threshold_title">Connect problems threshold</string>
    <string name="pref_crash_conn_broken_threshold_sum">Reports error after %s connection failures detected</string>

    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="title_select_vpn_count">%1$d selected</string>
</resources>
